--- a/index.html
+++ b/index.html
@@ -2,13 +2,45 @@
 <html lang="en">
 
 <head>
+  <title>Profile card component</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Profile card component</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
+  <div class="container">
+
+    <div class="card">
+
+      <div class="profile">
+        <img class="profile-picture" src="#" alt="Profile picture">
+        <div class="profile-info">
+          <p><span>Joel Buenrostro</span>28</p>
+          <p>Mexico</p>
+        </div>
+      </div>
+
+      <div class="card-data">
+        <ul class="card-list">
+          <li>
+            <p>88K</p>
+            <p>Followeras</p>
+          </li>
+          <li>
+            <p>883K</p>
+            <p>Likes</p>
+          </li>
+          <li>
+            <p>1.4K</p>
+            <p>Photos</p>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
