--- a/index.html
+++ b/index.html
@@ -10,37 +10,44 @@
 </head>
 
 <body>
-  <div class="container">
+  <main>
+    <div class="container">
 
-    <div class="card">
+      <div class="card-top">
+        <img src="./images/image-victor.jpg" alt="Profile image" />
+      </div>
 
       <div class="profile">
-        <img class="profile-picture" src="#" alt="Profile picture">
-        <div class="profile-info">
-          <p><span>Joel Buenrostro</span>28</p>
-          <p>Mexico</p>
+        <div class="title">
+          <p class="name">Victor Crest</p>
+          <p class="age">26</p>
+        </div>
+        <p class="location">London</p>
+      </div>
+
+      <div class="stats">
+        <div class="followers">
+          <p class="num">80K</p>
+          <p class="title">Followers</p>
+        </div>
+        <div class="stats__likes">
+          <p class="num">803K</p>
+          <p class="title">Likes</p>
+        </div>
+        <div class="photos">
+          <p class="num">1.4K</p>
+          <p class="title">Photos</p>
         </div>
       </div>
 
-      <div class="card-data">
-        <ul class="card-list">
-          <li>
-            <p>88K</p>
-            <p>Followeras</p>
-          </li>
-          <li>
-            <p>883K</p>
-            <p>Likes</p>
-          </li>
-          <li>
-            <p>1.4K</p>
-            <p>Photos</p>
-          </li>
-        </ul>
-
-      </div>
     </div>
-  </div>
+  </main>
+
+  <footer>
+    <p>Challenge by <a href="https://www.frontendmentor.io/challenges">Frontend Mentor.</a></p>
+    <p>Coded by <a href="https://github.com/JoelBuenrostro">Joel Buenrostro.</a></p>
+  </footer>
+
 </body>
 
 </html>
