--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -17,24 +18,24 @@
         <img src="./images/image-victor.jpg" alt="Profile image" />
       </div>
 
-      <div class="profile">
-        <div class="title">
-          <p class="name">Victor Crest</p>
-          <p class="age">26</p>
+      <div class="card-profile">
+        <div class="profile-title">
+          <p class="profile-name">Victor Crest</p>
+          <p class="profile-age">26</p>
         </div>
-        <p class="location">London</p>
+        <p class="profile-location">London</p>
       </div>
 
       <div class="stats">
-        <div class="followers">
+        <div class="stats-followers">
           <p class="num">80K</p>
           <p class="title">Followers</p>
         </div>
-        <div class="stats__likes">
+        <div class="stats-likes">
           <p class="num">803K</p>
           <p class="title">Likes</p>
         </div>
-        <div class="photos">
+        <div class="stats-photos">
           <p class="num">1.4K</p>
           <p class="title">Photos</p>
         </div>
